Recommendations Block: Fix non-working text-overflow

--- a/src/blocks/recommendations/style.scss
+++ b/src/blocks/recommendations/style.scss
@@ -14,6 +14,6 @@
 .parsely-recommendations-cardbody {
 	text-overflow: ellipsis;
 	overflow: hidden;
-	max-height: 150px;
+	white-space: nowrap;
 	padding: 5px;
 }
